Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64972

QWebEnginePage::urlChange doesn't provide anchor information

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.0 Beta 1
    • 5.9.1, 5.9.2
    • WebEngine
    • None
    • 64bit Linux, Slackware
    • 732d09331c1e4efa51501aae9bcd6924eecdd5c3

      The is a follow-up from this issue https://bugreports.qt.io/browse/QTBUG-50922

      urlChanged() signal doesn't provide anchor information when the content was set with setHtml() method. A simple test case is attached. Note, this worked in Qt-5.6.3.

        1. webengineview.test.tar.xz
          1 kB
          Vyacheslav Yurkov
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            pvarga Peter Varga
            uvv Vyacheslav Yurkov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes