Expose actual URL for data URLs instead of the virtual URL in the API

Chromium considers the actual URL as "scary" therefore prefers to pass a
simpler URL via the WebContents::GetVisibleURL() content API function.
For data URLs, use the actual URL instead to keep their anchor
information.

Task-number: QTBUG-64972
Change-Id: I74db3e5dd22a728656a58e50a4e3fba93b82dae2
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>